<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.fathzer</groupId>
	<artifactId>yapbam</artifactId>
	<version>0.21.8</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>com.fathzer.launcher.Launcher</mainClass>
		<maven.install.skip>true</maven.install.skip>
		<maven.deploy.skip>true</maven.deploy.skip>
		<sonar.java.source>1.8</sonar.java.source>
		<sonar.organization>yapbam</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.exclusions>**/*.png,**/*.jpg,**/*.jpeg,**/*.gif,**/*.ico</sonar.exclusions>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>buildnumber-maven-plugin</artifactId>
										<versionRange>[1.2,)</versionRange>
										<goals>
											<goal>create-timestamp</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnConfiguration>true</runOnConfiguration>
											<runOnIncremental>true</runOnIncremental>
										</execute>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>filteredResources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testSourceDirectory>testSrc</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create-timestamp</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<timestampFormat>dd/MM/yyyy</timestampFormat>
					<timestampPropertyName>build.date</timestampPropertyName>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>enforce-bytecode-version</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<enforceBytecodeVersion>
									<maxJdkVersion>1.8</maxJdkVersion>
									<ignoredScopes>
										<ignoreScope>test</ignoreScope>
									</ignoredScopes>
								</enforceBytecodeVersion>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>extra-enforcer-rules</artifactId>
						<version>1.6.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<finalName>program</finalName>
							<filters>
								<filter>
									<!-- Remove signatures and other useless stuff -->
									<artifact>*:*</artifact>
									<excludes>
										<exclude>license/**</exclude>
										<exclude>META-INF/**</exclude>
										<exclude>mozilla/**</exclude>
									</excludes>
								</filter>
								<filter>
									<!-- include Launcher -->
									<artifact>com.fathzer:java-check-launcher</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<!-- Remove itext (think it is never used) -->
									<artifact>com.lowagie:*</artifact>
									<excludes>
										<exclude>**</exclude>
									</excludes>
								</filter>
								<filter>
									<!-- Remove bouncycastle stuff used only in not supported jdk -->
									<artifact>bouncycastle:*</artifact>
									<excludes>
										<exclude>**</exclude>
									</excludes>
								</filter>
								<filter>
									<!-- Remove xml api stuff used only in not supported jdk -->
									<artifact>xml-apis:*</artifact>
									<excludes>
										<exclude>**</exclude>
									</excludes>
								</filter>
								<filter>
									<artifact>commons-logging:commons-logging</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>commons-codec:commons-codec</artifact>
									<excludes>
										<exclude>org/apache/commons/codec/language/**</exclude>
									</excludes>
								</filter>
								<!-- filter>
									<artifact>org.slf4j:slf4j-simple</artifact>
									<excludes>
										<exclude>**</exclude>
									</excludes>
								</filter-->
							</filters>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${mainClass}</mainClass>
									<manifestEntries>
										<SplashScreen-Image>net/yapbam/gui/images/splash.png</SplashScreen-Image>
										<Permissions>all-permissions</Permissions>
										<Application-Name>Yapbam</Application-Name>
										<Trusted-Only>true</Trusted-Only>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.5.4</version>
				<configuration>
					<descriptors>
						<descriptor>assembly.xml</descriptor>
					</descriptors>
					<appendAssemblyId>false</appendAssemblyId>
					<outputDirectory>${basedir}</outputDirectory>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- append to the packaging phase. -->
						<goals>
							<goal>single</goal> <!-- goals == mojos -->
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>java-check-launcher</artifactId>
			<version>1.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>ajlib</artifactId>
			<version>0.3.18</version>
		</dependency>
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>javaluator</artifactId>
			<version>3.0.4</version>
		</dependency>
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>yapbam-commons</artifactId>
			<version>1.10.0</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.19</version>
		</dependency>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.10</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.12</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>jlocal</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>jclop-dropbox2</artifactId>
			<version>0.1.8</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.jtidy</groupId>
			<artifactId>jtidy</artifactId>
			<version>1.0.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>